--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,7 @@ button:focus-visible {
   align-self: center;
 }
 
+/*Start navbar*/
 nav ul {
   list-style-type: none;
   margin: 0 auto 0 auto;
@@ -152,8 +153,6 @@ nav ul li:last-of-type {
 .tablink:hover {
   background-color: #ddd;
 }
-
-/* Create an active/current tablink class */
 .tablink.active {
   background-color: #ccc;
 }
@@ -167,7 +166,105 @@ nav ul li:last-of-type {
 }
 
 
+/* Start new stuff*/
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"); */
 
-#tab-gen {
-  display: o
+:root {
+  --primary-color: #185ee0;
+  --secondary-color: #e6eef9;
+  --tab-width: 180px;
+}
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+/* nav {
+  font-family: "Inter", sans-serif;
+  background-color: rgba(230, 238, 249, 0.5);
+} */
+
+.tabs {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  /* background-color: #fff; */
+  /* box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(24, 94, 224, 0.15); */
+  /* padding: 0.75rem; */
+  /* border-radius: 99px; */
+}
+
+.tabs * {
+  z-index: 2;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+.tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: var(--tab-width);
+  /* font-size: 1.25rem; */
+  /* font-weight: 500; */
+  /* border-radius: 99px; */
+  cursor: pointer;
+  transition: color 0.15s ease-in;
+}
+
+.notification {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  margin-left: 0.75rem;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  transition: 0.15s ease-in;
+}
+
+input[type=radio]:checked+label {
+  color: var(--primary-color);
+}
+
+input[type=radio]:checked+label>.notification {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+input[id=radio-1]:checked~.glider {
+  transform: translateX(0);
+}
+
+input[id=radio-2]:checked~.glider {
+  transform: translateX(100%);
+}
+
+input[id=radio-3]:checked~.glider {
+  transform: translateX(200%);
+}
+input[id=radio-4]:checked~.glider {
+  transform: translateX(300%);
+}
+
+.glider {
+  position: absolute;
+  display: flex;
+  height: 100%;
+  width: var(--tab-width);
+  background-color: var(--secondary-color);
+  z-index: 1;
+  /* border-radius: 99px; */
+  transition: 0.2s ease-out;
+}
+
+@media (max-width: 700px) {
+  .tabs {
+    transform: scale(0.6);
+  }
 }
