mono to diph interchange code

--- a/src/style.css
+++ b/src/style.css
@@ -296,7 +296,7 @@ input[id=radio-4]:checked~.glider {
 }
 
 
-.vowel-text, .lex-text, .lex-diph-text, .diph-paths {
+.vowel-text, .lex-text, .lex-diph-text, .lex-path {
   user-select: none;
   pointer-events: none;
 }
@@ -309,8 +309,9 @@ input[id=radio-4]:checked~.glider {
 }
 .lex-rhotic.lex-rhotic {
   fill: darkorchid;
+  background-color: darkorchid;
 }
-.lex-diph-text, .diph-paths, .diph-arrowhead {
+.lex-diph-text, .lex-path, .diph-arrowhead {
   fill: #3b3bb3;
 }
 
