--- a/src/style.css
+++ b/src/style.css
@@ -330,3 +330,15 @@ input[id=radio-4]:checked~.glider {
   height: 0.9em;
   border: 1px solid black;
 }
+
+
+/*https: //stackoverflow.com/a/64306268*/
+datalist {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    font-size: 0.7em;
+    width: 100%;
+    /* width: 200px; */
+}
