a lot of silliness

--- a/src/style.css
+++ b/src/style.css
@@ -320,7 +320,7 @@ input[id=radio-4]:checked~.glider {
   fill: #3b3bb3;
 }
 
-.hidden {
+.hidden, .lex-hidden, .diph-hidden {
   display: none;
 }
 
